static/css/app.css
/* ... */
.header .fb img {
    margin-top: -3px;
}
.header a:hover {
    opacity: 0.7;
    text-decoration: none;
}
.header img:hover {
    opacity: 0.7;
}
.banner-outer-container {
    height: 50%;
    overflow-x: auto;
    overflow-y: hidden;
}

.banner-outer-container .arrow {
    position: absolute;
    top: 430px;
    width: 28px;
    z-index: 2;
    cursor: pointer;
}

.banner-outer-container .arrow:hover {
    opacity: 0.5;
}

.banner-outer-container .arrow.left {
    left: 10px;
}

.banner-outer-container .arrow.right {
    right: 10px;
}

.banner-inner-container {
    width: 12800px;
    white-space: nowrap;
}
.banner-inner-container .banner-tile {
    float: left;
    position: relative;
    height: 450px;
    /* width: 640px; */
}
.banner-inner-container .banner-tile img {
    height: auto;
    width: auto;
}
.banner-inner-container .banner-tile .title {
    height: 60px;
    background: rgba(0, 0, 0, .5);
    color: #ffffff;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    padding-left: 53px;
}
.banner-inner-container .banner-tile .title span {
    color: #ffffff;
    line-height: 60px;
    font-size: 16px;
    letter-spacing: 0.075em;
    text-decoration: none;
}

.banner-inner-container .banner-tile .title .circle-divider {
    background: #ffffff;
    width: 4px;
    height: 4px;
    border-radius: 50%;
    display: inline-block;
    margin: 0px 14px 4px 14px;
}
.scroller-content {
    padding: 0px !important;
}
.mansonryContainer {
    width: 90%;
    margin: 70px auto 50px auto;
    -moz-column-gap: 0px;
    -webkit-column-gap: 0px;
    column-gap: 0px;
}

.no-results{
    display: block;
    font-size: 14px;
    line-height: 7;
    letter-spacing: 0.1em;
    text-align: center;
    width: 100%;
    position: absolute;
    margin-bottom: 20px;
    margin-top: -75px;
    left: 0px;
}

.tile {
    width: 100%;
    max-width: 500px;
    display: inline-block;
    text-align: center;
    cursor: pointer;
    padding: 5px;
}

@media (min-width: 320px) and (max-width: 640px) {
    .mansonryContainer {
        -moz-column-count: 1;
        -webkit-column-count: 1;
        column-count: 1;
    }
}
@media (min-width: 640px) and (max-width: 960px) {
    .mansonryContainer {
        -moz-column-count: 2;
        -webkit-column-count: 2;
        column-count: 2;
    }
}
@media (min-width: 960px) and (max-width: 1680px)  {
    .mansonryContainer {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}
@media (min-width: 1680px) and (max-width: 2000px) {
    .mansonryContainer {
        -moz-column-count: 5;
        -webkit-column-count: 5;
        column-count: 5;
    }
}
@media (min-width: 2000px) and (max-width: 2320px) {
    .mansonryContainer {
        -moz-column-count: 6;
        -webkit-column-count: 6;
        column-count: 6;
    }
}
@media (min-width: 2320px) and (max-width: 2640px) {
    .mansonryContainer {
        -moz-column-count: 7;
        -webkit-column-count: 7;
        column-count: 7;
    }
}
@media (min-width: 2640px) and (max-width: 2960px) {
    .mansonryContainer {
        -moz-column-count: 8;
        -webkit-column-count: 8;
        column-count: 8;
    }
}
.tile:hover {
    opacity: 0.7;
}
.tile img {
    width: 100%;
}
.tile .intro {
    text-transform: uppercase;
    padding: 10px 35px 35px;
    background: #f0f0f0;
}
.tile .intro .info {
    font-size: xx-small;
    margin-bottom: 5px;
}
.tile .intro .heading {
    font-size: 20px;
    letter-spacing: 0.1em;
}
.tile .intro .sub-heading {
    font-size: 14px;
}
.tile .intro .divider {
    margin-top: 0px;
    margin-bottom: 12px;
}

.tile .intro .synopsis {
    font-size: 11px;
    text-align: justify;
    line-height: 19px;
    word-wrap: break-word;
}

.tile .intro .synopsis h1, .tile .intro .synopsis h2,
.tile .intro .synopsis h3, .tile .intro .synopsis h4,
.tile .intro .synopsis h5, .tile .intro .synopsis h6 {
    font-size: 11px;
    text-align: justify;
    line-height: 19px;
    word-wrap: break-word;
}
.tile .intro .synopsis b {
    font-weight: 500;
} 
.tile .triangle {
    font-size: 0px;
    line-height: 0%;
    width: 0px;
    border-bottom: 14px solid #000;
    border-right: 14px solid #f0f0f0;
    margin-top: -14px;
}
.article-box{
    display: block;
    width: 100%;
    background-color: rgba(255, 255, 255, 1);
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    overflow: hidden;
}
.article-box .close {
    position: absolute;
    right: 2%;
    top: 30px;
}
.article-box .article-header {
    line-height: 45px;
    font-size: 14px;
    letter-spacing: 0.1em;
    padding: 0px;
    text-align: center;
    border-bottom: 0px;
}
.article-box .article-header .circle-divider {
    margin: 2px 20px;
}
.article-box .article {
    display: flex;
    position: absolute;
    top: 45px;
    bottom: 70px;
    left: 50%;
    margin-left: -45%;
    background-color: #f0f0f0;
    width: 90%;
    text-align: center;
    padding: 40px 0px;
    border-radius: 0px;
    box-shadow: none;
    -webkit-box-shadow: none;
    border: 0px;
}
.article-box .article .triangle {
    font-size: 0px;
    line-height: 0%;
    width: 0px;
    border-bottom: 14px solid #000;
    border-right: 14px solid #f0f0f0;
    position: absolute;
    left: 0px;
    bottom: 0px;
}
.article-box .article .article-content {
    width: 50% !important;
    text-align: justify;
    color: #000000;
    font-size: 13px;
    line-height: 21px;
    border-right: 1px solid #d5d5d5;
    outline: 0;
    overflow: auto;
}
.article-box .article .article-content.overflow {
    border-right: none;
}
.article-content .text h1, .article-content .text h2,
.article-content .text h3, .article-content .text h4, 
.article-content .text h5, .article-content .text h6 {
    letter-spacing: 0.075em;
}
.article-content .text a:hover{
    text-decoration: none;
    opacity: 0.7;
}

.article-box .article .article-content .inner-content {
    padding: 52px;
}
/* ... */

